--- a/qhack-frontend/src/css/dashboard-page.css
+++ b/qhack-frontend/src/css/dashboard-page.css
@@ -38,6 +38,9 @@ body {
     padding: 20px;
     z-index: 10;
     background-color: var(--background-color, #242428);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .dashboard-container {
@@ -92,7 +95,6 @@ body {
     font-weight: 500;
     letter-spacing: -0.5px;
     text-align: left;
-    color: var(--text-color, #e9e9ec);
 }
 
 .score-tags {
